--- a/config/sphinx.conf
+++ b/config/sphinx.conf
@@ -17,7 +17,7 @@ source tatoeba_sentences
 	type               = mysql
 	sql_host           = localhost
 	sql_user           = sphinxsearch
-	sql_pass           = 
+	sql_pass           = tatoeba
 	sql_db             = tatoeba
 	sql_port           = 3306
 	sql_query_pre      = SET NAMES utf8
